--- a/test-output/Default suite/Default test.html
+++ b/test-output/Default suite/Default test.html
@@ -75,7 +75,7 @@ function toggleAllBoxes() {
 <td><b>Instance</b></td>
 </tr>
 <tr>
-<td title='runners.MyRunner.runScenario()'><b>runScenario</b><br>Test class: runners.MyRunner<br>Test method: Runs Cucumber Scenarios<br>Parameters: "login to portal using valid credentials", "Optional[login feature]"</td>
+<td title='runners.MyRunnerTest.runScenario()'><b>runScenario</b><br>Test class: runners.MyRunnerTest<br>Test method: Runs Cucumber Scenarios<br>Parameters: "login to portal using valid credentials", "Optional[login feature]"</td>
 <td><div><pre>java.lang.AssertionError: expected [validation failed1] but found [validation failed]
 	at org.testng.Assert.fail(Assert.java:99)
 	at org.testng.Assert.failNotEquals(Assert.java:1037)
@@ -97,7 +97,7 @@ function toggleAllBoxes() {
 	at ?.I should get validation alert with  &quot;validation failed1&quot;(classpath:features/login.feature:11)
 </pre></div></td>
 <td>21</td>
-<td>runners.MyRunner@36bc55de</td></tr>
+<td>runners.MyRunnerTest@36bc55de</td></tr>
 </table><p>
 <table width='100%' border='1' class='invocation-passed'>
 <tr><td colspan='4' align='center'><b>PASSED TESTS</b></td></tr>
@@ -107,15 +107,15 @@ function toggleAllBoxes() {
 <td><b>Instance</b></td>
 </tr>
 <tr>
-<td title='runners.MyRunner.runScenario()'><b>runScenario</b><br>Test class: runners.MyRunner<br>Test method: Runs Cucumber Scenarios<br>Parameters: "login to portal using valid credentials", "Optional[login feature]"</td>
+<td title='runners.MyRunnerTest.runScenario()'><b>runScenario</b><br>Test class: runners.MyRunnerTest<br>Test method: Runs Cucumber Scenarios<br>Parameters: "login to portal using valid credentials", "Optional[login feature]"</td>
 <td></td>
 <td>21</td>
-<td>runners.MyRunner@36bc55de</td></tr>
+<td>runners.MyRunnerTest@36bc55de</td></tr>
 <tr>
-<td title='runners.MyRunner.runScenario()'><b>runScenario</b><br>Test class: runners.MyRunner<br>Test method: Runs Cucumber Scenarios<br>Parameters: "login to portal using valid credentials", "Optional[login feature]"</td>
+<td title='runners.MyRunnerTest.runScenario()'><b>runScenario</b><br>Test class: runners.MyRunnerTest<br>Test method: Runs Cucumber Scenarios<br>Parameters: "login to portal using valid credentials", "Optional[login feature]"</td>
 <td></td>
 <td>21</td>
-<td>runners.MyRunner@36bc55de</td></tr>
+<td>runners.MyRunnerTest@36bc55de</td></tr>
 </table><p>
 </body>
 </html>
