--- a/test-output/index.html
+++ b/test-output/index.html
@@ -104,7 +104,7 @@
                     <div class="method-list-content failed suite-Default_suite">
                       <span>
                         <img src="failed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="runners.MyRunner" class="method navigator-link" hash-for-method="runScenario(&quot;login to portal using valid credentials&quot;, &quot;Optional[login feature]&quot;)">runScenario("login to portal using valid credentials", "Optional[login feature]")</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="runners.MyRunnerTest" class="method navigator-link" hash-for-method="runScenario(&quot;login to portal using valid credentials&quot;, &quot;Optional[login feature]&quot;)">runScenario("login to portal using valid credentials", "Optional[login feature]")</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content failed suite-Default_suite -->
@@ -118,12 +118,12 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="runners.MyRunner" class="method navigator-link" hash-for-method="runScenario(&quot;login to portal using valid credentials&quot;, &quot;Optional[login feature]&quot;)">runScenario("login to portal using valid credentials", "Optional[login feature]")</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="runners.MyRunnerTest" class="method navigator-link" hash-for-method="runScenario(&quot;login to portal using valid credentials&quot;, &quot;Optional[login feature]&quot;)">runScenario("login to portal using valid credentials", "Optional[login feature]")</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="runners.MyRunner" class="method navigator-link" hash-for-method="runScenario(&quot;login to portal using valid credentials&quot;, &quot;Optional[login feature]&quot;)">runScenario("login to portal using valid credentials", "Optional[login feature]")</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="runners.MyRunnerTest" class="method navigator-link" hash-for-method="runScenario(&quot;login to portal using valid credentials&quot;, &quot;Optional[login feature]&quot;)">runScenario("login to portal using valid credentials", "Optional[login feature]")</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -141,7 +141,7 @@
           <div class="suite-Default_suite-class-failed">
             <div class="main-panel-header rounded-window-top">
               <img src="failed.png"/>
-              <span class="class-name">runners.MyRunner</span>
+              <span class="class-name">runners.MyRunnerTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
@@ -170,7 +170,7 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">runners.MyRunner</span>
+              <span class="class-name">runners.MyRunnerTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
@@ -207,7 +207,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;runners.MyRunner&quot;/&gt;
+      &lt;class name=&quot;runners.MyRunnerTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -258,15 +258,15 @@ data.addColumn('number', 'Time (ms)');
 data.addRows(3);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'runScenario')
-data.setCell(0, 2, 'runners.MyRunner')
+data.setCell(0, 2, 'runners.MyRunnerTest')
 data.setCell(0, 3, 21104);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'runScenario')
-data.setCell(1, 2, 'runners.MyRunner')
+data.setCell(1, 2, 'runners.MyRunnerTest')
 data.setCell(1, 3, 21059);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'runScenario')
-data.setCell(2, 2, 'runners.MyRunner')
+data.setCell(2, 2, 'runners.MyRunnerTest')
 data.setCell(2, 3, 21048);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
@@ -298,7 +298,7 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">runners.MyRunner</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">runners.MyRunnerTest</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">setUpClass(org.testng.TestRunner@3383649e)</span>
                 <span class="method-start">0 ms</span>
