--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,14 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="d6b89b">  <td>22/03/01 16:58:14</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:runners.MyRunner@36bc55de]">runScenario</td> 
+<tr bgcolor="d6b89b">  <td>22/03/01 16:58:14</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:runners.MyRunnerTest@36bc55de]">runScenario</td>
   <td>TestNG-PoolService-2@234171132</td>   <td></td> </tr>
-<tr bgcolor="d6b89b">  <td>22/03/01 16:58:35</td>   <td>21127</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AbstractTestNGCucumberTests.tearDownClass()[pri:0, instance:runners.MyRunner@36bc55de]">&lt;&lt;tearDownClass</td> 
+<tr bgcolor="d6b89b">  <td>22/03/01 16:58:35</td>   <td>21127</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AbstractTestNGCucumberTests.tearDownClass()[pri:0, instance:runners.MyRunnerTest@36bc55de]">&lt;&lt;tearDownClass</td>
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1217467887</td>   <td></td> </tr>
-<tr bgcolor="d6b89b">  <td>22/03/01 16:58:14</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:runners.MyRunner@36bc55de]">runScenario</td> 
+<tr bgcolor="d6b89b">  <td>22/03/01 16:58:14</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:runners.MyRunnerTest@36bc55de]">runScenario</td>
   <td>TestNG-PoolService-2@234171132</td>   <td></td> </tr>
-<tr bgcolor="d6b89b">  <td>22/03/01 16:58:14</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:runners.MyRunner@36bc55de]">runScenario</td> 
+<tr bgcolor="d6b89b">  <td>22/03/01 16:58:14</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:runners.MyRunnerTest@36bc55de]">runScenario</td>
   <td>TestNG-PoolService-2@234171132</td>   <td></td> </tr>
-<tr bgcolor="d6b89b">  <td>22/03/01 16:58:10</td>   <td>-3617</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AbstractTestNGCucumberTests.setUpClass(org.testng.ITestContext)[pri:0, instance:runners.MyRunner@36bc55de]">&gt;&gt;setUpClass</td> 
+<tr bgcolor="d6b89b">  <td>22/03/01 16:58:10</td>   <td>-3617</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AbstractTestNGCucumberTests.setUpClass(org.testng.ITestContext)[pri:0, instance:runners.MyRunnerTest@36bc55de]">&gt;&gt;setUpClass</td>
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1217467887</td>   <td></td> </tr>
 </table>
